--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ img {
     text-align: center;
 }
 .slider-wrapper .images img {
-    /* display: none; */
+    display: none;
     height: 100%;
 }
 .slider-wrapper .images img.active {
